--- a/rpg.css
+++ b/rpg.css
@@ -84,7 +84,7 @@
     border-radius: 10px;
 }
 body{
-    background-image:url(https://images.gamebanana.com/img/ss/mods/60b3b3871e802.jpg);
+    background-image:url(https://i0.wp.com/uploads.saigacdn.com/2020/04/sfii-sfv-free-images-00.jpg);
     background-size: 100%;
 
 }
